src/main/mt22-Jasmin/parser/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'array'", "'auto'", "'boolean'", "'break'", 
                     "'continue'", "'do'", "'else'", "'float'", "'for'", 
                     "'function'", "'inherit'", "'if'", "'integer'", "'of'", 
                     "'out'", "'return'", "'string'", "'void'", "'while'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", 
                     "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'::'", 
                     "'['", "']'", "'('", "')'", "'{'", "'}'", "';'", "':'", 
                     "'.'", "','", "'='" ]

    symbolicNames = [ "<INVALID>", "ARRAY", "AUTO", "BOOLEAN", "BREAK", 
                      "CONTINUE", "DO", "ELSE", "FLOAT", "FOR", "FUNCTION", 
                      "INHERIT", "IF", "INTEGER", "OF", "OUT", "RETURN", 
                      "STRING", "VOID", "WHILE", "ADD", "SUB", "MUL", "DIV", 
                      "MOD", "NOT", "AND", "OR", "EQUAL", "NOT_EQUAL", "LT", 
                      "GT", "LE", "GE", "CONCATE", "LSB", "RSB", "LP", "RP", 
                      "LB", "RB", "SM", "CL", "DOT", "CM", "ASSIGN", "INTLIT", 
                      "FLOATLIT", "BOOLEANLIT", "STRINGLIT", "ID", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "LINE_CMT", "BLOCK_CMT", "WS", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_declprime = 1
    RULE_decl = 2
    RULE_vardecl = 3
    RULE_multidecl = 4
    RULE_funcdecl = 5
    RULE_idprime = 6
    RULE_exprlist = 7
    RULE_exprprime = 8
    RULE_paramlist = 9
    RULE_paramprime = 10
    RULE_paramdecl = 11
    RULE_stmt = 12
    RULE_assignstmt = 13
    RULE_lhs = 14
    RULE_ifstmt = 15
    RULE_elsestmt = 16
    RULE_forstmt = 17
    RULE_whilestmt = 18
    RULE_dowhilestmt = 19
    RULE_breakstmt = 20
    RULE_continuestmt = 21
    RULE_returnstmt = 22
    RULE_callstmt = 23
    RULE_blockstmt = 24
    RULE_stmtlist = 25
    RULE_expr = 26
    RULE_expr1 = 27
    RULE_expr2 = 28
    RULE_expr3 = 29
    RULE_expr4 = 30
    RULE_expr5 = 31
    RULE_expr6 = 32
    RULE_expr7 = 33
    RULE_arraycell = 34
    RULE_funccall = 35
    RULE_typ = 36
    RULE_returnabletype = 37
    RULE_array = 38
    RULE_atomictype = 39
    RULE_intprime = 40
    RULE_arraylit = 41

    ruleNames =  [ "program", "declprime", "decl", "vardecl", "multidecl", 
                   "funcdecl", "idprime", "exprlist", "exprprime", "paramlist", 
                   "paramprime", "paramdecl", "stmt", "assignstmt", "lhs", 
                   "ifstmt", "elsestmt", "forstmt", "whilestmt", "dowhilestmt", 
                   "breakstmt", "continuestmt", "returnstmt", "callstmt", 
                   "blockstmt", "stmtlist", "expr", "expr1", "expr2", "expr3", 
                   "expr4", "expr5", "expr6", "expr7", "arraycell", "funccall", 
                   "typ", "returnabletype", "array", "atomictype", "intprime", 
                   "arraylit" ]

    EOF = Token.EOF
    ARRAY=1
    AUTO=2
    BOOLEAN=3
    BREAK=4
    CONTINUE=5
    DO=6
    ELSE=7
    FLOAT=8
    FOR=9
    FUNCTION=10
    INHERIT=11
    IF=12
    INTEGER=13
    OF=14
    OUT=15
    RETURN=16
    STRING=17
    VOID=18
    WHILE=19
    ADD=20
    SUB=21
    MUL=22
    DIV=23
    MOD=24
    NOT=25
    AND=26
    OR=27
    EQUAL=28
    NOT_EQUAL=29
    LT=30
    GT=31
    LE=32
    GE=33
    CONCATE=34
    LSB=35
    RSB=36
    LP=37
    RP=38
    LB=39
    RB=40
    SM=41
    CL=42
    DOT=43
    CM=44
    ASSIGN=45
    INTLIT=46
    FLOATLIT=47
    BOOLEANLIT=48
    STRINGLIT=49
    ID=50
    UNCLOSE_STRING=51
    ILLEGAL_ESCAPE=52
    LINE_CMT=53
    BLOCK_CMT=54
    WS=55
    ERROR_CHAR=56

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declprime(self):
            return self.getTypedRuleContext(MT22Parser.DeclprimeContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.declprime()
            self.state = 85
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclprimeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MT22Parser.DeclContext,0)


        def declprime(self):
            return self.getTypedRuleContext(MT22Parser.DeclprimeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_declprime

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclprime" ):
                return visitor.visitDeclprime(self)
            else:
                return visitor.visitChildren(self)




    def declprime(self):

        localctx = MT22Parser.DeclprimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declprime)
        try:
            self.state = 91
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 87
                self.decl()
                self.state = 88
                self.declprime()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 90
                self.decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(MT22Parser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(MT22Parser.FuncdeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = MT22Parser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 95
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 93
                self.vardecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 94
                self.funcdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idprime(self):
            return self.getTypedRuleContext(MT22Parser.IdprimeContext,0)


        def CL(self):
            return self.getToken(MT22Parser.CL, 0)

        def returnabletype(self):
            return self.getTypedRuleContext(MT22Parser.ReturnabletypeContext,0)


        def SM(self):
            return self.getToken(MT22Parser.SM, 0)

        def multidecl(self):
            return self.getTypedRuleContext(MT22Parser.MultideclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl" ):
                return visitor.visitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def vardecl(self):

        localctx = MT22Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vardecl)
        try:
            self.state = 105
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 97
                self.idprime()
                self.state = 98
                self.match(MT22Parser.CL)
                self.state = 99
                self.returnabletype()
                self.state = 100
                self.match(MT22Parser.SM)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.multidecl()
                self.state = 103
                self.match(MT22Parser.SM)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MultideclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.CM)
            else:
                return self.getToken(MT22Parser.CM, i)

        def multidecl(self):
            return self.getTypedRuleContext(MT22Parser.MultideclContext,0)


        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def CL(self):
            return self.getToken(MT22Parser.CL, 0)

        def returnabletype(self):
            return self.getTypedRuleContext(MT22Parser.ReturnabletypeContext,0)


        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_multidecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultidecl" ):
                return visitor.visitMultidecl(self)
            else:
                return visitor.visitChildren(self)




    def multidecl(self):

        localctx = MT22Parser.MultideclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_multidecl)
        try:
            self.state = 119
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self.match(MT22Parser.ID)
                self.state = 108
                self.match(MT22Parser.CM)
                self.state = 109
                self.multidecl()
                self.state = 110
                self.match(MT22Parser.CM)
                self.state = 111
                self.expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                self.match(MT22Parser.ID)
                self.state = 114
                self.match(MT22Parser.CL)
                self.state = 115
                self.returnabletype()
                self.state = 116
                self.match(MT22Parser.ASSIGN)
                self.state = 117
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.ID)
            else:
                return self.getToken(MT22Parser.ID, i)

        def CL(self):
            return self.getToken(MT22Parser.CL, 0)

        def FUNCTION(self):
            return self.getToken(MT22Parser.FUNCTION, 0)

        def typ(self):
            return self.getTypedRuleContext(MT22Parser.TypContext,0)


        def LP(self):
            return self.getToken(MT22Parser.LP, 0)

        def paramlist(self):
            return self.getTypedRuleContext(MT22Parser.ParamlistContext,0)


        def RP(self):
            return self.getToken(MT22Parser.RP, 0)

        def blockstmt(self):
            return self.getTypedRuleContext(MT22Parser.BlockstmtContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_funcdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdecl" ):
                return visitor.visitFuncdecl(self)
            else:
                return visitor.visitChildren(self)




    def funcdecl(self):

        localctx = MT22Parser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_funcdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(MT22Parser.ID)
            self.state = 122
            self.match(MT22Parser.CL)
            self.state = 123
            self.match(MT22Parser.FUNCTION)
            self.state = 124
            self.typ()
            self.state = 125
            self.match(MT22Parser.LP)
            self.state = 126
            self.paramlist()
            self.state = 127
            self.match(MT22Parser.RP)
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 128
                self.match(MT22Parser.INHERIT)
                self.state = 129
                self.match(MT22Parser.ID)


            self.state = 132
            self.blockstmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdprimeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def CM(self):
            return self.getToken(MT22Parser.CM, 0)

        def idprime(self):
            return self.getTypedRuleContext(MT22Parser.IdprimeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_idprime

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdprime" ):
                return visitor.visitIdprime(self)
            else:
                return visitor.visitChildren(self)




    def idprime(self):

        localctx = MT22Parser.IdprimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_idprime)
        try:
            self.state = 138
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 134
                self.match(MT22Parser.ID)
                self.state = 135
                self.match(MT22Parser.CM)
                self.state = 136
                self.idprime()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 137
                self.match(MT22Parser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exprprime(self):
            return self.getTypedRuleContext(MT22Parser.ExprprimeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_exprlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprlist" ):
                return visitor.visitExprlist(self)
            else:
                return visitor.visitChildren(self)




    def exprlist(self):

        localctx = MT22Parser.ExprlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_exprlist)
        try:
            self.state = 142
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.SUB, MT22Parser.NOT, MT22Parser.LP, MT22Parser.LB, MT22Parser.INTLIT, MT22Parser.FLOATLIT, MT22Parser.BOOLEANLIT, MT22Parser.STRINGLIT, MT22Parser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 140
                self.exprprime()
                pass
            elif token in [MT22Parser.RP, MT22Parser.RB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprprimeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def CM(self):
            return self.getToken(MT22Parser.CM, 0)

        def exprprime(self):
            return self.getTypedRuleContext(MT22Parser.ExprprimeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_exprprime

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprprime" ):
                return visitor.visitExprprime(self)
            else:
                return visitor.visitChildren(self)




    def exprprime(self):

        localctx = MT22Parser.ExprprimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_exprprime)
        try:
            self.state = 149
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 144
                self.expr()
                self.state = 145
                self.match(MT22Parser.CM)
                self.state = 146
                self.exprprime()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 148
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramprime(self):
            return self.getTypedRuleContext(MT22Parser.ParamprimeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_paramlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamlist" ):
                return visitor.visitParamlist(self)
            else:
                return visitor.visitChildren(self)




    def paramlist(self):

        localctx = MT22Parser.ParamlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_paramlist)
        try:
            self.state = 153
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.INHERIT, MT22Parser.OUT, MT22Parser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 151
                self.paramprime()
                pass
            elif token in [MT22Parser.RP]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamprimeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramdecl(self):
            return self.getTypedRuleContext(MT22Parser.ParamdeclContext,0)


        def CM(self):
            return self.getToken(MT22Parser.CM, 0)

        def paramprime(self):
            return self.getTypedRuleContext(MT22Parser.ParamprimeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_paramprime

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamprime" ):
                return visitor.visitParamprime(self)
            else:
                return visitor.visitChildren(self)




    def paramprime(self):

        localctx = MT22Parser.ParamprimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_paramprime)
        try:
            self.state = 160
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 155
                self.paramdecl()
                self.state = 156
                self.match(MT22Parser.CM)
                self.state = 157
                self.paramprime()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 159
                self.paramdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def CL(self):
            return self.getToken(MT22Parser.CL, 0)

        def returnabletype(self):
            return self.getTypedRuleContext(MT22Parser.ReturnabletypeContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def OUT(self):
            return self.getToken(MT22Parser.OUT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_paramdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamdecl" ):
                return visitor.visitParamdecl(self)
            else:
                return visitor.visitChildren(self)




    def paramdecl(self):

        localctx = MT22Parser.ParamdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_paramdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 162
                self.match(MT22Parser.INHERIT)


            self.state = 166
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.OUT:
                self.state = 165
                self.match(MT22Parser.OUT)


            self.state = 168
            self.match(MT22Parser.ID)
            self.state = 169
            self.match(MT22Parser.CL)
            self.state = 170
            self.returnabletype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignstmt(self):
            return self.getTypedRuleContext(MT22Parser.AssignstmtContext,0)


        def ifstmt(self):
            return self.getTypedRuleContext(MT22Parser.IfstmtContext,0)


        def forstmt(self):
            return self.getTypedRuleContext(MT22Parser.ForstmtContext,0)


        def whilestmt(self):
            return self.getTypedRuleContext(MT22Parser.WhilestmtContext,0)


        def dowhilestmt(self):
            return self.getTypedRuleContext(MT22Parser.DowhilestmtContext,0)


        def breakstmt(self):
            return self.getTypedRuleContext(MT22Parser.BreakstmtContext,0)


        def continuestmt(self):
            return self.getTypedRuleContext(MT22Parser.ContinuestmtContext,0)


        def returnstmt(self):
            return self.getTypedRuleContext(MT22Parser.ReturnstmtContext,0)


        def callstmt(self):
            return self.getTypedRuleContext(MT22Parser.CallstmtContext,0)


        def blockstmt(self):
            return self.getTypedRuleContext(MT22Parser.BlockstmtContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = MT22Parser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_stmt)
        try:
            self.state = 182
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 172
                self.assignstmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 173
                self.ifstmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 174
                self.forstmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 175
                self.whilestmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 176
                self.dowhilestmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 177
                self.breakstmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 178
                self.continuestmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 179
                self.returnstmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 180
                self.callstmt()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 181
                self.blockstmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lhs(self):
            return self.getTypedRuleContext(MT22Parser.LhsContext,0)


        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def SM(self):
            return self.getToken(MT22Parser.SM, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_assignstmt
